# transaction-control

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
apps/api/: alembic.ini  pyproject.toml
apps/api/src/tc/: main.py
apps/api/src/tc/api/v1/: admin.py  audit.py  auth.py  dashboard.py  router.py  tasks.py  timeline.py  transactions.py  users.py
apps/api/src/tc/core/: config.py  logging.py  security.py  timeline_templates.json
apps/api/src/tc/db/: base.py  session.py
apps/api/src/tc/db/migrations/: env.py
apps/api/src/tc/db/migrations/versions/: 1087cb75961c_initial_schema.py  a3d5f1e2c8b4_add_event_logs_table.py  a95f7a944cc1_add_columns_in_task.py
apps/api/src/tc/db/models/: __init__.py  audit.py  event_log.py  membership.py  org.py  task.py  timeline.py  transaction.py  user.py
apps/api/src/tc/domain/: enums.py  models.py  rules.py
apps/api/src/tc/services/: audit_service.py  auth_service.py  dashboard_service.py  deadline_service.py  event_log_service.py  health_service.py  task_service.py  timeline_service.py  transaction_service.py  user_service.py
apps/api/src/tc/tests/: conftest.py  test_audit.py  test_auth.py  test_deadlines.py  test_event_logs.py  test_health.py  test_health_recompute.py  test_integration.py  test_rules.py  test_transactions.py
apps/api/src/tc/workers/: beat_schedule.py  celery_app.py  tasks.py
docs/: api.md  architecture.md  local-dev.md
infra/: docker-compose.yml
scripts/: dev.sh  fmt.sh  seed_db.py
(+29 files in other folders)
